fix: header z-index & bg color

--- a/styles/index.css
+++ b/styles/index.css
@@ -149,6 +149,8 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 9999;
+  background-color: var(--color-background-primary);
   padding: 28px var(--gutter-side);
   height: 74px;
   box-sizing: border-box;
